Finishing TreeBASE scraper by including script to ingest all trees into the RDF treestore.

--- a/tools/treebase_scraper/Makefile
+++ b/tools/treebase_scraper/Makefile
@@ -1,4 +1,6 @@
-all: trees.list
+.PHONY: all clean ingest
+
+all: trees
 
 trees.rss:
 	wget "http://purl.org/phylo/treebase/phylows/tree/find?query=tb.kind.tree=\"Species Tree\"&format=rss1" -O $@
@@ -6,9 +8,12 @@ trees.rss:
 trees.list: trees.rss
 	grep -Po "TB2:Tr[0-9]+" trees.rss | sort | uniq > $@
 
-trees: 
+trees: download_trees.py trees.list
 	mkdir -p trees
-	python download_trees.py
+	python $<
+
+ingest: ingest_trees.py trees
+	python $<
 
 clean:
 	rm -f trees.list trees.rss
