Annotate TreeBASE trees, for now just by citing their URI on TreeBASE.

--- a/tools/treebase_scraper/Makefile
+++ b/tools/treebase_scraper/Makefile
@@ -15,5 +15,8 @@ trees: download_trees.py trees.list
 ingest: ingest_trees.py trees
 	python $<
 
+annotate: annotate_trees.py trees
+	python $<
+
 clean:
 	rm -f trees.list trees.rss
